major overhaul and cleanups, added brand icons and button animations

--- a/assets/html/footer/footer-legal.html
+++ b/assets/html/footer/footer-legal.html
@@ -6,7 +6,7 @@
 <template id="footer-legal">
     <div class="footer-legal">
         <div class="container align-start">
-            <button id="theme-toggle" class="icon-toggle-btn" aria-label="Toggle theme" type="button">
+            <button id="theme-toggle" class="icon-button" aria-label="Toggle theme" type="button">
                 <svg class="icon theme-icon" width="24" height="24">
                     <use href="#dark_mode_icon"></use>
                 </svg>
