some minor tweaks

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <section class="container" aria-label="Projects section">
             <h2 id="projects-section">Projects</h2>
             <div class="label">What I do</div>
-            <div id="projects-container"></div>
+            <div id="projects-container" class="section-divider"></div>
         </section>
 
         <!-- Skills -->
@@ -196,12 +196,12 @@
             <h2 id="tools-section">Tools & Platforms</h2>
             <div class="label">What I use</div>
             <div class="layout-column section-divider">
-                <div class="card">
+                <div class="card ">
                     <div class="card-content">
                         <h4>Development</h4>
-                        <div id="dev-tools-container" class="layout-row"></div>
+                        <div id="dev-tools-container" class="layout-row section-divider-thin"></div>
                         <h4>Graphics and designs</h4>
-                        <div id="graphics-tools-container" class="layout-row"></div>
+                        <div id="graphics-tools-container" class="layout-row section-divider-thin"></div>
                     </div>
                 </div>
             </div>
