tweak: minor adjustments on tools and dev sections, added underline anim on a links

--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
             <div class="layout-column section-divider">
                 <div class="card ">
                     <div class="card-content">
+                        <h4>Languages</h4>
+                        <div id="dev-lang-container" class="layout-row section-divider-thin"></div>
                         <h4>Development</h4>
                         <div id="dev-tools-container" class="layout-row section-divider-thin"></div>
                         <h4>Graphics and designs</h4>
