feat: add slide show component and  improved fireflies

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                     <p>" YOUR ideas</p>
                     <p>-<strong>Not just built, FORGED!</strong> "</p>
                 </div>
-                <div class="fireflies">
-                    <!-- Firefly elements will be created here by JS -->
-                </div>
+                <div class="fireflies"></div>
                 <div class="contact-info" aria-label="Contact Information">
                     <button id="theme-toggle" class="icon-button animate-button" aria-label="Toggle theme"
                         type="button">
@@ -81,40 +79,12 @@
                     that
                     click, captivate, and connect. You bring the vision. I'll forge the rest.
                 </p>
-
-                <div class="layout-row">
-                    <div class="icon-button unclickable animate-button">Java
-                        <svg class="icon animate-icon">
-                            <use href="#java_icon"></use>
-                        </svg>
+                <div class="slider-pane" data-slide-count="9" data-slider-speed="17s" data-slide-width="60px"
+                    aria-label="Continuous slideshow of development skills">
+                    <div class="slide-wrapper" role="region">
+                        <div id="skills-slideshow-container" class="slide-track" aria-live="off">
+                        </div>
                     </div>
-
-                    <div class="icon-button unclickable animate-button">HTML
-                        <svg class="icon animate-icon">
-                            <use href="#html_icon"></use>
-                        </svg>
-                    </div>
-                    <div class="icon-button unclickable animate-button">CSS
-                        <svg class="icon animate-icon">
-                            <use href="#css_icon"></use>
-                        </svg>
-                    </div>
-                    <div class="icon-button unclickable animate-button">JavaScript
-                        <svg class="icon animate-icon">
-                            <use href="#js_icon"></use>
-                        </svg>
-                    </div>
-                    <div class="icon-button unclickable animate-button">Android
-                        <svg class="icon animate-icon">
-                            <use href="#android_icon"></use>
-                        </svg>
-                    </div>
-                    <div class="icon-button unclickable animate-button">Kotlin
-                        <svg class="icon animate-icon">
-                            <use href="#kotlin_icon"></use>
-                        </svg>
-                    </div>
-                </div>
                 </div>
             </article>
         </section>
