feat: falling leaves in light mode and fireflies on dark mode

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <p>-<strong>Not just built, FORGED!</strong> "</p>
                 </div>
                 <div class="fireflies"></div>
+                <div class="falling-leaves"></div>
                 <div class="contact-info" aria-label="Contact Information">
                     <button id="theme-toggle" class="icon-button animate-button" aria-label="Toggle theme"
                         type="button">
