improve: skills section with some minor adjustments in cards and flex tables.

--- a/index.html
+++ b/index.html
@@ -103,64 +103,41 @@
             <div class="label">What I offer</div>
             <div class="layout-column section-divider">
                 <div>
-                    <h3>Core Development Skills</h3>
                     <div class="flex-table">
-                        <div class="flex-table-cell transparent">
-                            <h4>Languages & Frameworks</h4>
+                        <div class="flex-table-cell xl transparent">
+                            <h3>Game Development</h3>
                             <ul>
-                                <li>Java</li>
-                                <li>Kotlin (App development)</li>
-                                <li>LibGDX (Game dev)</li>
-                                <li>HTML5, CSS3, JavaScript</li>
-                                <li>Bash/Shell scripting</li>
+                                <li>Built with LibGDX (v1.13.1) – lightweight, fast, flexible</li>
+                                <li>Maps designed in Tiled, fully customizable and layered</li>
+                                <li>Original pixel art + animation created in Aseprite</li>
+                                <li>Custom logic systems: battle, AI, inventory, UI, and more</li>
                             </ul>
                         </div>
-                        <div class="flex-table-cell transparent">
-                            <h4>Game Development</h4>
+                        <div class="flex-table-cell xl transparent">
+                            <h3>App Development</h3>
                             <ul>
-                                <li>LibGDX (1.13.1)</li>
-                                <li>Tiled (Map Editor)</li>
-                                <li>Aseprite (Pixel Art & Animation)</li>
-                                <li>Custom-built engine/framework logic</li>
+                                <li>Native Android apps using Java & Kotlin</li>
+                                <li>Material 3 design with Jetpack Compose/Views</li>
+                                <li>Firebase integration: Auth, Firestore, Analytics</li>
+                                <li>Optimized for low-end devices — fast, responsive</li>
+                                <li>Monetization: AdMob, in-app purchases</li>
+                                <li>Modern libraries: Retrofit, Room, Coil, etc.</li>
                             </ul>
                         </div>
-                        <!-- <div class="flex-table-cell transparent">
-                            <h4>App Development</h4>
+                        <div class="flex-table-cell xl transparent">
+                            <h3>Visual & UI Design</h3>
                             <ul>
-                                <li>Android SDK (Java/Kotlin)</li>
-                                <li>Custom UI/UX using Jetpack Components</li>
-                                <li>Ad integrations</li>
-                                <li>Performance Optimization for Low-end devices</li>
-                                <li>Open-source libraries (Retrofit, Room, etc.)</li>
+                                <li>Pixel-perfect sprite sheets, tilesets, and animations</li>
+                                <li>Minimalist UI for indie games and apps</li>
+                                <li>Custom icons and visual assets for brand consistency</li>
+                                <li>Performance-first: optimized visuals that load fast</li>
                             </ul>
-                        </div> -->
+                        </div>
                     </div>
-                </div>
-
-                <div>
-                    <!-- <h3>Design & Pixel Art</h3>
-                    <div class="flex-table">
-                        <div class="flex-table-cell transparent">
-                            <h4>Tools & Skills</h4>
-                            <ul>
-                                <li>Aseprite (Main tool for sprite sheets, tilesets)</li>
-                                <li>Minimalist UI design for indie projects</li>
-                                <li>Icon design & in-game visual assets</li>
-                                <li>Asset optimization (tiny but powerful visuals)</li>
-                            </ul>
-                        </div>
-                        <div class="flex-table-cell transparent">
-                            <h4>Style</h4>
-                            <ul>
-                                <li>Pixel art (16x16, 32x32, retro aesthetic)</li>
-                                <li>Game UI mockups</li>
-                                <li>Branding assets (e.g., logos for apps or games)</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section>
+
 
         <!-- Tools -->
         <section class="container" aria-label="Skills section">
@@ -169,11 +146,11 @@
             <div class="layout-column section-divider">
                 <div class="card ">
                     <div class="card-content">
-                        <h4>Languages</h4>
+                        <h3>Languages</h3>
                         <div id="dev-lang-container" class="layout-row section-divider-thin"></div>
-                        <h4>Development</h4>
+                        <h3>Development</h3>
                         <div id="dev-tools-container" class="layout-row section-divider-thin"></div>
-                        <h4>Graphics and designs</h4>
+                        <h3>Graphics and designs</h3>
                         <div id="graphics-tools-container" class="layout-row section-divider-thin"></div>
                     </div>
                 </div>
